Renamed and finished basic parsing support.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 DFA minimization
 Fix "all but", especially block comments
 Better document reg_exp macro
+Remove the DFA from the parser and instead just use the parsing table
